Removed deploy.sh + Added Ko-Fi button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="app"></div>
+    <div class="flex justify-center my-6">
+      <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Me soutenir sur Ko-Fi', '#29abe0', 'A0A5BNJW0');kofiwidget2.draw();</script> 
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
