--- a/index.html
+++ b/index.html
@@ -5,11 +5,29 @@
     <link rel="icon" type="image/svg+xml" href="/gw2-todolist/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guild Wars 2 - Todolist</title>
-    <script type="module" crossorigin src="/gw2-todolist/assets/index.77d49ae9.js"></script>
-    <link rel="stylesheet" href="/gw2-todolist/assets/index.db8fa2a1.css">
+    <!-- Matomo -->
+    <script>
+      let _paq = window._paq = window._paq || [];
+        _paq.push(["disableCookies"]);
+        _paq.push(['trackPageView']);
+        _paq.push(['enableLinkTracking']);
+        (function() {
+          let u = "//analytics.an-d.me/";
+          _paq.push(['setTrackerUrl', u+'matomo.php']);
+          _paq.push(['setSiteId', '8']);
+          let d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+          g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+        })();
+    </script>
+    <!-- End Matomo Code -->
+    <script type="module" crossorigin src="/gw2-todolist/assets/index.aae8c0d0.js"></script>
+    <link rel="stylesheet" href="/gw2-todolist/assets/index.a58c994c.css">
   </head>
   <body>
     <div id="app"></div>
+    <div class="flex justify-center my-6">
+      <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Me soutenir sur Ko-Fi', '#29abe0', 'A0A5BNJW0');kofiwidget2.draw();</script> 
+    </div>
     
   </body>
 </html>
